<resources>
    <string name="app_name">JuegoCartas</string>
    <string name="players_1">1 PLAYER</string>
    <string name="players_2">2 PLAYERS</string>
    <string name="resume">RESUME GAME</string>
    <string name="newGame">NEW GAME</string>
    <string name="player1">Player1: </string>
    <string name="player2">Player2: </string>
    <string name="loseMsg">You have lost!</string>
    <string name="wonMsg">You have WON!</string>
    <string name="bankWonMsg">Bank has won!</string>
    <string name="player1WonMsg">Player1 has won!</string>
    <string name="player2WonMsg">Player2 has won!</string>
    <string name="you">You: </string>
    <string name="score">Score: </string>
    <string name="Bank">Bank: </string>
    <string name="whoIsBank">Bank </string>
    <string name="play">PLAY</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="oneMore">ONE MORE</string>
    <string name="oneMore1">ONE MORE 1</string>
    <string name="oneMore2">ONE MORE 2</string>
    <string name="stop">STOP</string>
    <string name="stop1">STOP 1</string>
    <string name="stop2">STOP 2</string>
    <string name="initialScore">0</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_about">About</string>
    <string name="menu_web">Web site</string>
    <string name="title">A card game</string>

</resources>